--- a/src/App.scss
+++ b/src/App.scss
@@ -39,7 +39,7 @@ header {
 	text-align: center;
 	overflow: hidden;
 	background-color: #f3f8f5;
-	// background-image: url('./public/unages/storm.jpg')
+	background-image: url('../public/images/storm.jpg');
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
