--- a/src/App.scss
+++ b/src/App.scss
@@ -451,12 +451,12 @@ footer a:focus {
 }
 
 .intro-container {
-	opacity: 0.9;
 	max-width: 400px;
 	border-radius: 1em;
 	margin: auto;
 	padding: 10px;
-	color: #1747b5;
+	color: #0eaa2d;
 	margin-right: 300px;
 	margin-bottom: 500px;
+	font-weight: bolder;
 }
